--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,33 +13,24 @@ variables:
   anyTfChanges: false
 
 steps:
-
 - task: TerraformInstaller@0
-  displayName: install Terraform v0.14.3
   inputs:
-    terraformVersion: '0.14.3'
-
-- task: TerraformTaskV1@0
-  displayName: terraform init
+    terraformVersion: '0.14.9'
+- task: TerraformTaskV2@2
   inputs:
     provider: 'azurerm'
     command: 'init'
-    workingDirectory: '$(System.DefaultWorkingDirectory)'
-    backendServiceArm: '$(subscription)'
-    backendAzureRmResourceGroupName: '$(resourceGroup)'
-    backendAzureRmStorageAccountName: '$(storageAccount)'
-    backendAzureRmContainerName: '$(container)'
-    backendAzureRmKey: '$(tfstateFile)'
-
-- task: TerraformTaskV1@0
-  displayName: terraform plan -out=tfplan
+    backendServiceArm: 'Azure pour les étudiants(0ec45264-05e6-4136-b2b7-d9291bb2aeeb)'
+    backendAzureRmResourceGroupName: 'Terraform-RG'
+    backendAzureRmStorageAccountName: 'tfstatestorage1993'
+    backendAzureRmContainerName: 'tfstate'
+    backendAzureRmKey: 'dev.terraform.tfstate'
+- task: TerraformTaskV2@2
   inputs:
     provider: 'azurerm'
     command: 'plan'
-    workingDirectory: '$(System.DefaultWorkingDirectory)'
     commandOptions: '-out=tfplan'
-    # commandOptions: '-detailed-exitcode -out=tfplan'
-    environmentServiceNameAzureRM: '$(subscription)'
+    environmentServiceNameAzureRM: 'Azure pour les étudiants(1)(0ec45264-05e6-4136-b2b7-d9291bb2aeeb)'
 
 - task: PowerShell@2
   displayName: detect any terraform change
@@ -60,13 +51,11 @@ steps:
       {
         Write-Host "There is no change detected in Terraform tfplan file"
       }
-
-- task: TerraformTaskV1@0
-  displayName: terraform apply tfplan
+- task: TerraformTaskV2@2
   condition: eq(variables.anyTfChanges, true)
   inputs:
     provider: 'azurerm'
     command: 'apply'
-    workingDirectory: '$(System.DefaultWorkingDirectory)'
     commandOptions: 'tfplan'
-    environmentServiceNameAzureRM: '$(subscription)'
+    environmentServiceNameAzureRM: 'Azure pour les étudiants(2)(0ec45264-05e6-4136-b2b7-d9291bb2aeeb)'
+
