Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ variables:
 steps:
 - task: TerraformInstaller@0
   inputs:
-    terraformVersion: '0.14.9'
+    terraformVersion: 'latest'
 - task: TerraformTaskV2@2
   inputs:
     provider: 'azurerm'
