--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,6 +51,12 @@ steps:
       {
         Write-Host "There is no change detected in Terraform tfplan file"
       }
+
+
+- task: WhiteSource@21
+  inputs:
+    projectName: 'chouchene1993'
+  
 - task: TerraformTaskV2@2
   condition: eq(variables.anyTfChanges, true)
   inputs:
