Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,5 +59,7 @@ steps:
     commandOptions: 'tfplan'
     environmentServiceNameAzureRM: 'Azure pour les étudiants(0ec45264-05e6-4136-b2b7-d9291bb2aeeb)'
 
-
+- task: SynopsysDetectTask@7
+  inputs:
+    DetectVersion: 'latest'
 
